First refactor of code with angular

--- a/Dommy.Business/Dommy.Business.csproj
+++ b/Dommy.Business/Dommy.Business.csproj
@@ -288,7 +288,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Scenarios\OnOffLightScenarioTile.cshtml" />
+    <Content Include="Scenarios\OnOffLightScenarioTile.html" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Scenarios\Light-Off.png" />
