Adapte javascript code position for angular

--- a/Dommy.Web/Dommy.Web.csproj
+++ b/Dommy.Web/Dommy.Web.csproj
@@ -166,6 +166,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionResults\JsonNetResult.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\ResolverEngine.cs" />
     <Compile Include="Controllers\HomeController.cs" />
