Fix bug on client wcf with a ClientFactory

--- a/Dommy.Business.Test/Dommy.Business.Test.csproj
+++ b/Dommy.Business.Test/Dommy.Business.Test.csproj
@@ -92,6 +92,7 @@
     <Compile Include="MockWebRequest.cs" />
     <Compile Include="Scenarios\WeatherScenarioDescriptionTest.cs" />
     <Compile Include="Scripts\ScriptEngineConfigTest.cs" />
+    <Compile Include="Services\ClientFactoryTest.cs" />
     <Compile Include="Services\ClientTest.cs" />
     <Compile Include="SpeechListenerTest.cs" />
     <Compile Include="Speech\SpeechToTextConfigTest.cs" />
