--- a/Dommy.Web/packages.config
+++ b/Dommy.Web/packages.config
@@ -33,6 +33,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
+  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net45" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
