--- a/Dommy.Business/packages.config
+++ b/Dommy.Business/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="3.0.0.4001" targetFramework="net45" />
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
+  <package id="JetBrains.Annotations.Redist" version="7.1" targetFramework="net45" />
   <package id="log4net" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.0.0" targetFramework="net45" />
   <package id="NAudio" version="1.6" targetFramework="net45" />
