--- a/Dommy.Extensions.Kinect/packages.config
+++ b/Dommy.Extensions.Kinect/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JetBrains.Annotations.Redist" version="7.1" targetFramework="net45" />
   <package id="log4net" version="2.0.2" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
