--- a/Dommy.Business.Test/packages.config
+++ b/Dommy.Business.Test/packages.config
@@ -7,4 +7,9 @@
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net45" />
   <package id="Ninject.MockingKernel" version="3.0.0.5" targetFramework="net45" />
   <package id="Ninject.MockingKernel.Moq" version="3.0.0.5" targetFramework="net45" />
+  <package id="NSubstitute" version="1.7.2.0" targetFramework="net45" />
+  <package id="xunit" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0-beta4-build2738" targetFramework="net45" />
 </packages>
