--- a/Dommy.Business/packages.config
+++ b/Dommy.Business/packages.config
@@ -2,14 +2,15 @@
 <packages>
   <package id="CassiniDev" version="5.0.2-bleeding-17" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
-  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
-  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.0.2" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Diagnostics" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net45" />
   <package id="NAudio" version="1.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
