--- a/Dommy.Web.Tests/packages.config
+++ b/Dommy.Web.Tests/packages.config
@@ -1,20 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc.fr" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor.fr" version="3.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client.fr" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core.fr" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost.fr" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages.fr" version="3.2.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http.fr" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Mvc.fr" version="5.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Razor.fr" version="3.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Client.fr" version="5.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Core.fr" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.WebHost.fr" version="5.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebPages.fr" version="3.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Net.Http.fr" version="2.0.20710.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="xunit" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.assert" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.core" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
 </packages>
