--- a/Dommy.Business/packages.config
+++ b/Dommy.Business/packages.config
@@ -1,26 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CassiniDev" version="5.0.2-bleeding-17" targetFramework="net45" />
-  <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
-  <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
-  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net45" />
-  <package id="NAudio" version="1.7" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
-  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
-  <package id="Ninject.Extensions.Factory" version="3.0.1.0" targetFramework="net45" />
-  <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net40" />
-  <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net40" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="OwinHost" version="2.1.0" targetFramework="net45" />
-  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="CassiniDev" version="5.0.2-bleeding-17" targetFramework="net45" userInstalled="true" />
+  <package id="Castle.Core" version="3.2.2" targetFramework="net45" userInstalled="true" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" userInstalled="true" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="NAudio" version="1.7" targetFramework="net45" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net4" userInstalled="true" />
+  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject.Extensions.Factory" version="3.0.2-unstable-10" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net4" userInstalled="true" />
+  <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net4" userInstalled="true" />
+  <package id="Owin" version="1.0" targetFramework="net45" userInstalled="true" />
+  <package id="OwinHost" version="2.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" userInstalled="true" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" userInstalled="true" />
+  <package id="xunit" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.assert" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.core" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
 </packages>
