--- a/Dommy.Extensions.Kinect.Sdk1/packages.config
+++ b/Dommy.Extensions.Kinect.Sdk1/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
-  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
-  <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net45" />
-  <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.assert" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.core" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta1-build2945" targetFramework="net45" userInstalled="true" />
 </packages>
